# vdnld

./: .gitignore  AGENTS.md  README.md  pyproject.toml
src/vdnld/: __init__.py  app.py  cli.py  dependencies.py
src/vdnld/download/: __init__.py  cache.py  direct.py  execute.py  hls.py  manager.py
src/vdnld/extractors/: __init__.py  browser.py  registry.py  youtube.py
src/vdnld/harness/: __init__.py  notes.py
src/vdnld/manifest/: __init__.py  m3u8.py
src/vdnld/merge/: __init__.py  policy.py
src/vdnld/net/: __init__.py  http.py  proxy.py
tests/: test_browser.py  test_cache.py  test_dependencies.py  test_direct.py  test_execute.py  test_hls.py  test_m3u8.py  test_planner.py  test_youtube.py
